--- a/ci.trading.app/ci.trading.app.csproj
+++ b/ci.trading.app/ci.trading.app.csproj
@@ -9,10 +9,13 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ci.trading.models\ci.trading.models.csproj" />
     <ProjectReference Include="..\ci.trading.service\ci.trading.service.csproj" />
   </ItemGroup>
 
