--- a/ci.trading.service/ci.trading.service.csproj
+++ b/ci.trading.service/ci.trading.service.csproj
@@ -6,7 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ci.trading.models\ci.trading.models.csproj" />
   </ItemGroup>
 
 </Project>
