adding keys for paper trades

--- a/ci.trading.app/appsettings.json
+++ b/ci.trading.app/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppSettings": {
-    "ApiLive": "live-api",
-    "ApiPaper": "paper-api"
+    "ApiLiveEndpoint": "live-api",
+    "ApiLiveKey": "",
+    "ApiPaperEndpoint": "https://paper-api.alpaca.markets",
+    "ApiPaperKey": "PKFNHRQ9RE0FA47RUO8A"
   }
 }
