--- a/ci.trading.app/appsettings.json
+++ b/ci.trading.app/appsettings.json
@@ -3,6 +3,8 @@
     "ApiLiveEndpoint": "live-api",
     "ApiLiveKey": "",
     "ApiPaperEndpoint": "https://paper-api.alpaca.markets",
-    "ApiPaperKey": "PKFNHRQ9RE0FA47RUO8A"
+    "ApiPaperKey": "PKFNHRQ9RE0FA47RUO8A",
+    "ApiPaperSecretKey": "",
+    "ApiLiveSecretKey":  ""
   }
 }
